Update on Newsfeed and follower List Page
1. Newsfeed now includes an users own uploaded pictures.
2. Follower/Following page now shows the number of Followers and Followings.
